--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Library</title>
-    <link rel="stylesheet" href="/static/style.css"> <!-- Link to your external CSS file -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/static/style.css">
+<title>Image and Button Layout</title>
 </head>
 <body>
-<div class="container">
-    <img src="/static/compose-mail-2.png">
+<div class="option1">
+  <h1 class="h1">Start Composing Your Email</h1>
+  <div class="container">
+    <img class="image" src="/static/compose-mail-2.png" alt="Image">
+    <button class="button">Start</button>
+  </div>
 </div>
-</div>
-
 </body>
 </html>
