--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/static/style.css">
-<title>Image and Button Layout</title>
+<title>Email Marketing Tool</title>
 </head>
 <body>
 <div class="option1">
   <h1 class="h1">Start Composing Your Email</h1>
-  <div class="container">
-    <img class="image" src="/static/compose-mail-2.png" alt="Image">
-    <button class="button">Start</button>
+  <div class="row">
+    <div class="container">
+      <img class="image" src="/static/compose-mail-2.png" alt="Image">
+      <button class="button">Start</button>
+    </div>
+    <div class="container-2">
+      <img class="image" src="/static/compose-mail-2.png" alt="Image">
+      <button class="button">Start</button>
+    </div>
   </div>
 </div>
 </body>
