--- a/static/style.css
+++ b/static/style.css
@@ -11,18 +11,24 @@ body {
 
 .h1 {
   font-family: Georgia, serif;
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 20px;
+  margin-bottom: 15px;
 }
 
-.container {
-  width: 300px; /* Change width as needed */
-  height: 400px; /* Change height as needed */
+.row {
+  display: flex;
+}
+
+.container,
+.container-2 {
+  width: 300px;
+  height: 400px;
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: center;
+  margin: 0 10px;
 }
 
 .image {
@@ -35,7 +41,7 @@ body {
   margin-top: 60px;
   padding: 10px 20px;
   background-color: #007bff;
-  color: 0000FF;
+  color: #fff;
   border: none;
   border-radius: 5px;
   font-size: 16px;
