--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,25 @@
 </head>
 <body>
 <div class="option1">
-  <h1 class="h1">Start Composing Your Email</h1>
+  <div class="h1-2">
+    <h1 class="h1">Compose Email</h1>
+  </div>
+  <div class="h1-1">
+    <h1 class="h2">Compose Email</h1>
+  </div>
+  <div class="h1-3">
+    <h1 class="h3">Compose Email</h1>
+  </div>
   <div class="row">
     <div class="container">
       <img class="image" src="/static/compose-mail-2.png" alt="Image">
       <button class="button">Start</button>
     </div>
     <div class="container-2">
+      <img class="image" src="/static/compose-mail-2.png" alt="Image">
+      <button class="button">Start</button>
+    </div>
+    <div class="container-3">
       <img class="image" src="/static/compose-mail-2.png" alt="Image">
       <button class="button">Start</button>
     </div>
