--- a/static/style.css
+++ b/static/style.css
@@ -9,10 +9,11 @@ body {
   background-color: #f4f4f4;
 }
 
-.h1 {
+.h1,.h2,.h3 {
   font-family: Georgia, serif;
-  font-size: 20px;
+  font-size: 25px;
   margin-bottom: 15px;
+  margin-left:20px;
 }
 
 .row {
@@ -20,15 +21,16 @@ body {
 }
 
 .container,
-.container-2 {
-  width: 300px;
-  height: 400px;
+.container-2,
+.container-3{
+  width: 200px;
+  height: 300px;
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: center;
-  margin: 0 10px;
+  margin: 0 40px;
 }
 
 .image {
