--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 <div class="option1">
-  <div class="h1-2">
-    <h1 class="h1">Compose Email</h1>
-  </div>
-  <div class="h1-1">
-    <h1 class="h2">Compose Email</h1>
-  </div>
-  <div class="h1-3">
-    <h1 class="h3">Compose Email</h1>
+  <div class="row">
+    <div class="h1-2">
+      <h1 class="h1">Compose Email</h1>
+    </div>
+    <div class="h1-1">
+      <h1 class="h2">Compose Email</h1>
+    </div>
+    <div class="h1-3">
+      <h1 class="h3">Compose Email</h1>
+    </div>
   </div>
   <div class="row">
     <div class="container">
