--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,10 @@
       <h1 class="h1">Compose Email</h1>
     </div>
     <div class="h1-1">
-      <h1 class="h2">Compose Email</h1>
+      <h1 class="h2">Email With Templates</h1>
     </div>
     <div class="h1-3">
-      <h1 class="h3">Compose Email</h1>
+      <h1 class="h3">Add Templates + List</h1>
     </div>
   </div>
   <div class="row">
