--- a/templates/index.html
+++ b/templates/index.html
@@ -22,15 +22,15 @@
   <div class="row">
     <div class="container">
       <img class="image" src="/static/compose-mail-2.png" alt="Image">
-      <button class="button">Start Now</button>
+      <a href="page1.html" class="button">Start Now</a>
     </div>
     <div class="container-2">
       <img class="image" src="/static/templates.png" alt="Image">
-      <button class="button">Start Now</button>
+      <a href="page2.html" class="button">Start Now</a>
     </div>
     <div class="container-3">
       <img class="image" src="/static/list.png" alt="Image">
-      <button class="button">Start Now</button>
+      <a href="page3.html" class="button">Start Now</a>
     </div>
   </div>
 </div>
