--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
   <div class="row">
     <div class="container">
       <img class="image" src="/static/compose-mail-2.png" alt="Image">
-      <a href="page1.html" class="button">Start Now</a>
+      <a href="form.html" class="button">Start Now</a>
     </div>
     <div class="container-2">
       <img class="image" src="/static/templates.png" alt="Image">
